--- a/common-jre/src/nonfree/resources/org/geogebra/common/jre/properties/menu.properties
+++ b/common-jre/src/nonfree/resources/org/geogebra/common/jre/properties/menu.properties
@@ -209,7 +209,7 @@ CentroidOfA=Centroid of %0
 CheckBoxTitle=Check Box to Show/Hide Objects
 CheckOutTutorial=Check out our %0 tutorial!
 CheckedNumerically=(checked numerically)
-ChiSquaredContribution=\u03a7² Contribution
+ChiSquaredContribution=\u03a7ï¿½ Contribution
 ChiSquaredTest=ChiSquared Test
 ChooseCalculator=Choose Calculator
 ChooseColor=Choose a color
@@ -225,7 +225,7 @@ CircleArc3.Help=Select center and two points
 CircleArcTools=Circle & Arc Tools
 CircleAxisPoint=Circle with Axis through Point
 CircleAxisPoint.Help=Select axis, then point on circle
-CircleEquation=(x - m)² + (y - n)² = r²
+CircleEquation=(x - m)ï¿½ + (y - n)ï¿½ = rï¿½
 CircleOfAxisAThroughB=Circle of axis %0 through %1
 CirclePointRadius=Circle: Center & Radius
 CirclePointRadius.Help=Select center point, then enter radius
@@ -473,6 +473,8 @@ DirectionOfA=Direction of %0
 Directrix=Directrix
 DirectrixOfA=Directrix of %0
 Discard=Discard
+Discover=Discover
+Discover.Help=Select one point
 Discrete=Discrete
 Display=Display
 DisplayPointSymbol=Display the symbol for points
@@ -506,7 +508,7 @@ DontSave=Don't Save
 DotPlot=Dot Plot
 DoubleClickToOpen=Double Click Opens GeoGebra Window
 DoubleLine=Double line
-DoubleLineEquation=(a x + b y + c)² = 0
+DoubleLineEquation=(a x + b y + c)ï¿½ = 0
 Down=Down
 Download=Download
 Download.3DPrint=3D print (.stl)
@@ -548,7 +550,7 @@ Elementary34=Elementary 3/4
 Ellipse=Ellipse
 Ellipse3=Ellipse
 Ellipse3.Help=Select two foci, then point on ellipse
-EllipseEquation=(x - m)² / a² + (y - n)² / b² = 1
+EllipseEquation=(x - m)ï¿½ / aï¿½ + (y - n)ï¿½ / bï¿½ = 1
 EllipseWithFociABPassingThroughC=Ellipse with foci %0, %1 passing through %2
 EllipseWithFociABPassingThroughCParallelToD=Ellipse with foci %0, %1 passing through %2 parallel to %3
 EllipseWithFociABandFirstAxisLengthC=Ellipse with foci %0, %1 and first axis' length %2
@@ -594,7 +596,7 @@ Expand.Help=Expands brackets of selected line
 ExpandAll=Expand All
 ExpandedForm=Expanded Form
 ExpectedCount=Expected Count
-ExplicitConicEquation=y = a x² + b x + c
+ExplicitConicEquation=y = a xï¿½ + b x + c
 ExplicitLineEquation=y = m x + b
 ExplicitLineGradient=m
 Exponential=Exponential
@@ -806,7 +808,7 @@ Hue=Hue
 Hyperbola=Hyperbola
 Hyperbola3=Hyperbola
 Hyperbola3.Help=Select two foci, then point on hyperbola
-HyperbolaEquation=(x - m)² / a² - (y - n)² / b² = 1
+HyperbolaEquation=(x - m)ï¿½ / aï¿½ - (y - n)ï¿½ / bï¿½ = 1
 HyperbolaWithFociABPassingThroughC=Hyperbola with foci %0, %1 passing through %2
 HyperbolaWithFociABandFirstAxisLengthC=Hyperbola with foci %0, %1 and first axis' length %2
 HyperbolicCylinder=Hyperbolic Cylinder
@@ -824,9 +826,9 @@ IllegalArgumentAinCustomToolB=Illegal Argument %0 in Custom Tool %1
 Image=Image
 Image.Help=Select image from files or webcam
 Image.Tool=Image
-ImageErrorAB=Problem creating image with dimensions %0 × %1
+ImageErrorAB=Problem creating image with dimensions %0 ï¿½ %1
 Images=Images
-ImplicitConicEquation=a x² + b xy + c y² + d x + e y = f
+ImplicitConicEquation=a xï¿½ + b xy + c yï¿½ + d x + e y = f
 ImplicitLineEquation=a x + b y = c
 ImplicitPoly=Implicit Curve
 ImplicitSurface=Implicit Surface
@@ -1168,9 +1170,9 @@ PanView=Pan View
 Parabola=Parabola
 Parabola.Help=Select point, then directrix
 Parabola.Tool=Parabola
-ParabolaConicForm=4p(y \u2013 k) = (x \u2013 h)²
-ParabolaEquation=y² = or x² =
-ParabolaVertexForm=y=a(x \u2013 h)² + k
+ParabolaConicForm=4p(y \u2013 k) = (x \u2013 h)ï¿½
+ParabolaEquation=yï¿½ = or xï¿½ =
+ParabolaVertexForm=y=a(x \u2013 h)ï¿½ + k
 ParabolaWithFocusAandDirectrixB=Parabola with focus %0 and directrix %1
 ParabolicCylinder=Parabolic cylinder
 Paraboloid=Paraboloid
@@ -1336,7 +1338,7 @@ Quality=Quality
 Question=Question
 QuitNow=Quit Now
 RGB=RGB
-RSquare.Short=R²
+RSquare.Short=Rï¿½
 Radiant=Radians
 Radius=Radius
 RadiusOfA=Radius of %0
@@ -1349,15 +1351,15 @@ Ray.Tool=Ray
 RayThroughAB=Ray through %0, %1
 RayThroughAWithDirectionB=Ray through %0 with direction %1
 ReadMore=Read more\u2026
-RealSense.DetectedMessage=Congratulations, your Intel® RealSense\u2122 Camera can be used with GeoGebra!
-RealSense.DownloadRuntimes=An updated module for the Intel® RealSense\u2122 Camera needs to be installed
+RealSense.DetectedMessage=Congratulations, your Intelï¿½ RealSense\u2122 Camera can be used with GeoGebra!
+RealSense.DownloadRuntimes=An updated module for the Intelï¿½ RealSense\u2122 Camera needs to be installed
 RealSense.DownloadUpdate=We advise that you upgrade to the latest F200 Camera DCM drivers here:
-RealSense.NotUpToDate=Your Intel® RealSense\u2122 installation is not up to date (%0)
-RealSense.Tutorial=Intel® RealSense\u2122 Tutorial
-RealSense.UpdatedRuntimes=New modules for the Intel® RealSense\u2122 Camera are now installed
-RealSenseNotUpToDate1=Your Intel® RealSense\u2122 Camera drivers are not up to date, we'll download and install new ones.
+RealSense.NotUpToDate=Your Intelï¿½ RealSense\u2122 installation is not up to date (%0)
+RealSense.Tutorial=Intelï¿½ RealSense\u2122 Tutorial
+RealSense.UpdatedRuntimes=New modules for the Intelï¿½ RealSense\u2122 Camera are now installed
+RealSenseNotUpToDate1=Your Intelï¿½ RealSense\u2122 Camera drivers are not up to date, we'll download and install new ones.
 RealSenseNotUpToDate2=This may take a few minutes, you will be notified when it's finished.
-RealSenseUpdated1=Your Intel® RealSense\u2122 Camera drivers are now up to date.
+RealSenseUpdated1=Your Intelï¿½ RealSense\u2122 Camera drivers are now up to date.
 RealSenseUpdated2=Please restart GeoGebra to use the Camera.
 ReallySignOut=Do you really want to sign out?
 ReceivedData=Received Data
@@ -1633,7 +1635,7 @@ Speed=Speed
 Sphere=Sphere
 Sphere2=Sphere: Center & Point
 Sphere2.Help=Select center point, then point on sphere
-SphereEquation=(x - m)² + (y - n)² + (z - p)² = r²
+SphereEquation=(x - m)ï¿½ + (y - n)ï¿½ + (z - p)ï¿½ = rï¿½
 SpherePointRadius=Sphere: Center & Radius
 SpherePointRadius.Help=Select the sphere's center point, and enter radius
 SphereThroughAwithCenterB=Sphere through %0 with center %1
@@ -1682,7 +1684,7 @@ Suggestion.CreateSlider=Create slider
 Suggestion.SpecialPoints=Special Points
 Suite=Suite
 Sum=\u03a3x
-Sum2=\u03a3x²
+Sum2=\u03a3xï¿½
 SumCells=Sum
 SumCells.Help=Calculates sum of selected cells
 SumSquaredErrors.short=SSE
