Add tool and command IncircleCenter

--- a/common-jre/src/nonfree/resources/org/geogebra/common/jre/properties/command.properties
+++ b/common-jre/src/nonfree/resources/org/geogebra/common/jre/properties/command.properties
@@ -369,7 +369,9 @@ ImplicitDerivative=ImplicitDerivative
 ImplicitDerivative.Syntax=[ <f(x, y)> ]
 ImplicitDerivative.SyntaxCAS=[ <f(x, y)> ]\n[ <Expression>, <Dependent Variable>, <Independent Variable> ]
 Incircle=Incircle
+IncircleCenter=IncircleCenter
 Incircle.Syntax=[ <Point>, <Point>, <Point> ]
+IncircleCenter.Syntax=[ <Point>, <Point>, <Point> ]
 IndexOf=IndexOf
 IndexOf.Syntax=[ <Object>, <List> ]\n[ <Text>, <Text> ]\n[ <Object>, <List>, <Start Index> ]\n[ <Text>, <Text>, <Start Index> ]
 InfiniteCone=InfiniteCone
