Add tool Incircle

--- a/common-jre/src/nonfree/resources/org/geogebra/common/jre/properties/menu.properties
+++ b/common-jre/src/nonfree/resources/org/geogebra/common/jre/properties/menu.properties
@@ -833,6 +833,8 @@ ImplicitLineEquation=a x + b y = c
 ImplicitPoly=Implicit Curve
 ImplicitSurface=Implicit Surface
 ImportDataFile=Import Data File
+IncircleCenter=Center of Incircle of a Triangle
+Incircle=Incircle of a Triangle
 IncircleOfTriangleABC=Incircle of triangle %0%1%2
 Increasing=Increasing
 IncreasingOnce=Increasing (Once)
